# whisperdesk-diarization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  package.json
.github/workflows/: build.yml
examples/integration/: whisperdesk-integration.md
include/: diarize-cli.h  speaker-embedder.h  speaker-segmenter.h  utils.h
scripts/: build.js  build.sh  debug.js
scripts/builders/: cli-builder.js
scripts/checkers/: prerequisites-checker.js
scripts/config/: diarization-config.js
scripts/generators/: template-generator.js
scripts/managers/: model-manager.js  onnx-runtime-manager.js
scripts/utils/: build-utils.js  exec-utils.js
src/: CMakeLists.txt  diarize-cli.cpp  main.cpp  speaker-embedder.cpp  speaker-segmenter.cpp  utils.cpp
